[gd_scene load_steps=52 format=3 uid="uid://lett8hlyh4w2"]

[ext_resource type="Script" path="res://scripts/goblins/classes/torch_goblin.gd" id="1_vem7l"]
[ext_resource type="Texture2D" uid="uid://bbtw28fyp185r" path="res://assets/TinySwords/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="2_ngm6p"]
[ext_resource type="Texture2D" uid="uid://dlg763kbkda1u" path="res://assets/TinySwords/Factions/Knights/Troops/Dead/Dead.png" id="3_qbybt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbgbq"]
atlas = ExtResource("2_ngm6p")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8xlc"]
atlas = ExtResource("2_ngm6p")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jprd7"]
atlas = ExtResource("2_ngm6p")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5hk5"]
atlas = ExtResource("2_ngm6p")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux38d"]
atlas = ExtResource("2_ngm6p")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfe1m"]
atlas = ExtResource("2_ngm6p")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn8sm"]
atlas = ExtResource("2_ngm6p")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkhsn"]
atlas = ExtResource("2_ngm6p")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr34o"]
atlas = ExtResource("2_ngm6p")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbn1x"]
atlas = ExtResource("2_ngm6p")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7byg"]
atlas = ExtResource("2_ngm6p")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fhmf"]
atlas = ExtResource("2_ngm6p")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4l4u"]
atlas = ExtResource("2_ngm6p")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnlh5"]
atlas = ExtResource("2_ngm6p")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvpxt"]
atlas = ExtResource("2_ngm6p")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xv0e"]
atlas = ExtResource("2_ngm6p")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuv02"]
atlas = ExtResource("2_ngm6p")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nyou"]
atlas = ExtResource("2_ngm6p")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6du3"]
atlas = ExtResource("3_qbybt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkuj5"]
atlas = ExtResource("3_qbybt")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ikuh"]
atlas = ExtResource("3_qbybt")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rd2d"]
atlas = ExtResource("3_qbybt")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbrja"]
atlas = ExtResource("3_qbybt")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nptyl"]
atlas = ExtResource("3_qbybt")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwovk"]
atlas = ExtResource("3_qbybt")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdmc3"]
atlas = ExtResource("3_qbybt")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8boqb"]
atlas = ExtResource("3_qbybt")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs8yj"]
atlas = ExtResource("3_qbybt")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ew2b"]
atlas = ExtResource("3_qbybt")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v84sq"]
atlas = ExtResource("3_qbybt")
region = Rect2(512, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_537dn"]
atlas = ExtResource("3_qbybt")
region = Rect2(640, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvc6y"]
atlas = ExtResource("3_qbybt")
region = Rect2(768, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e65jn"]
atlas = ExtResource("2_ngm6p")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_itphu"]
atlas = ExtResource("2_ngm6p")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5bn"]
atlas = ExtResource("2_ngm6p")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lacdc"]
atlas = ExtResource("2_ngm6p")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdose"]
atlas = ExtResource("2_ngm6p")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rejge"]
atlas = ExtResource("2_ngm6p")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_875y6"]
atlas = ExtResource("2_ngm6p")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uwi0"]
atlas = ExtResource("2_ngm6p")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_liqow"]
atlas = ExtResource("2_ngm6p")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwugu"]
atlas = ExtResource("2_ngm6p")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_egdsy"]
atlas = ExtResource("2_ngm6p")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_s120h"]
atlas = ExtResource("2_ngm6p")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g401i"]
atlas = ExtResource("2_ngm6p")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_i8b7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbgbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8xlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jprd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5hk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux38d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfe1m")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn8sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkhsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr34o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbn1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7byg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fhmf")
}],
"loop": true,
"name": &"attack_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4l4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnlh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvpxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xv0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuv02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nyou")
}],
"loop": true,
"name": &"attack_up",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6du3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkuj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ikuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rd2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbrja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nptyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwovk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdmc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8boqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs8yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ew2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v84sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_537dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvc6y")
}],
"loop": true,
"name": &"die",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e65jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itphu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lacdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdose")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rejge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_875y6")
}],
"loop": true,
"name": &"idle",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uwi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liqow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwugu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egdsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s120h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g401i")
}],
"loop": true,
"name": &"walking",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_smej8"]
radius = 21.095

[sub_resource type="CircleShape2D" id="CircleShape2D_e5ych"]
radius = 65.123

[node name="red_goblin" type="RigidBody2D"]
z_index = 4
z_as_relative = false
y_sort_enabled = true
mass = 20.0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_vem7l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i8b7p")
animation = &"attack"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_smej8")

[node name="GoblinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoblinArea"]
shape = SubResource("CircleShape2D_e5ych")

[node name="RLNode2D" type="RLNode2D" parent="."]
is_attacking = true
target_position = Vector2(1, 1)
linear_velocity = Vector2(0, -100)
reward = 1000.0
position = Vector2(-30.0806, -72.8607)
linear_velocity = Vector2(0, -100)

[node name="Timer" type="Timer" parent="."]

[node name="AttackTimer" type="Timer" parent="."]

[node name="CoolDownTimer" type="Timer" parent="."]

[node name="LineOfSight" type="RayCast2D" parent="."]
rotation = -1.5708
scale = Vector2(4, 4)

[node name="LineOfSightVisualization" type="Line2D" parent="."]

[connection signal="body_entered" from="GoblinArea" to="." method="_on_goblin_area_body_entered"]
[connection signal="body_exited" from="GoblinArea" to="." method="_on_goblin_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_cool_down_timer_timeout"]
